--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,12 @@ hud status score {
 ui {
   z-index: 100;
 }
+
+/* [data-render-block="map"] {
+  width: 148px;
+  height: 148px;
+  background: gray;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+} */
