Upgrade for code mainly calculate sub-types

--- a/src/sub_tiles.css
+++ b/src/sub_tiles.css
@@ -8,7 +8,7 @@
     z-index: 10;
     color: #f2e5f4;
     font-weight: 700;
-    font-size: revert;
+    font-size: 9px;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
