--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,29 @@ ui {
   z-index: 100;
 }
 
+/* Animations */
+/* ::part(ping-wrap-part) {
+  position: absolute;
+  top: -17px;
+  left: -17px;
+  display: flex;
+  width: 34px;
+  height: 34px;
+  align-items: center;
+  justify-content: center;
+}
+
+::part(ping-part) {
+  position: relative;
+  display: flex;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+
+  animation: pingAnim 2.2s ease-in-out 3;
+} */
+/* ~~~ */
+
 /* Cursors */
 .cursor {
   position: absolute;
