Game fles new structure. Reworked folders.

--- a/game/src/tiles.css
+++ b/game/src/tiles.css
@@ -7,14 +7,14 @@
 
 .mapTile.dirt1 {
   height: var(--map-item-size);
-  background: url("../terrain_2.png") 673px -64px;
+  background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 673px -64px;
   /* background-color: green; */
   padding: 0;
 }
 
 .mapTile.dirt2 {
   height: var(--map-item-size);
-  background: url("../terrain_2.png") 576px -64px;
+  background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 576px -64px;
   /* background-color: green; */
   padding: 0;
   /* background-color: brown */
@@ -22,49 +22,49 @@
 
 .mapTile.dirt3 {
   height: var(--map-item-size);
-  background: url("../terrain_2.png") 480px -64px;
+  background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 480px -64px;
   padding: 0;
   /* background-color: orange */
 }
 
 .mapTile.grass1 {
   height: var(--map-item-size);
-  background: url("../terrain_2.png") 671px -256px;
+  background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 671px -256px;
   /*   background-color: green; */
   padding: 0;
 }
 
 .mapTile.grass2 {
   height: var(--map-item-size);
-  background: url("../terrain_2.png") 574px -256px;
+  background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 574px -256px;
   /* background-color: green; */
   padding: 0;
 }
 
 .mapTile.grass3 {
   height: var(--map-item-size);
-  background: url("../terrain_2.png") 480px -256px;
+  background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 480px -256px;
   /* background-color: green; */
   padding: 0;
 }
 
 .mapTile.sand1 {
   height: var(--map-item-size);
-  background: url("../terrain_2.png") 0px -448px;
+  background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 0px -448px;
   /* background-color: yellow; */
   padding: 0;
 }
 
 .mapTile.water1 {
   height: var(--map-item-size);
-  background: url("../terrain_2.png") 95px -64px;
+  background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 95px -64px;
   /* background-color: yellow; */
   padding: 0;
 }
 
 .mapTile.hole1 {
   height: var(--map-item-size);
-  background: url("../terrain_2.png") 384px -64px;
+  background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 384px -64px;
   /* background-color: green; */
   padding: 0;
 }
