--- a/game/src/terrain/sub_tiles.css
+++ b/game/src/terrain/sub_tiles.css
@@ -22,29 +22,39 @@
 [data-obj-sub-type^="sub-0"] {
     /* background-color: rgba(167, 217, 232, 0.2); */
     border: 1px solid blue;
+} 
+
+
+
+.mapTile > [data-obj-sub-type] {
+    background: url("./../../maps/proto-summer/assets/terrain_2.png");
+    opacity: 0;
+}
+.mapTile.grass1 > [data-obj-sub-type] {
+    opacity: 1;
 }
 
 /* grass1 */
 .mapTile.grass1 > [data-obj-sub-type^="sub-0"] {
     /* background-color: rgba(167, 217, 232, 0.2); */
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 670px -352px;
+    background-position: 670px -352px;
 }
 
 
 .mapTile.grass1 > [data-obj-sub-type^="sub-1-e-1"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 670px -261px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 670px -261px;
     background-color: hsla(0, 100%, 50%, 1);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-1-e-2"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 638px -261px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 638px -261px;
     background-color: hsla(31, 100%, 50%, 1);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-1-e-3"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 606px -261px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 606px -261px;
     background-color: hsla(57, 100%, 50%, 1);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-1-e-4"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 670px -292px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 670px -292px;
     background-color: hsla(99, 100%, 50%, 1);
 }
 
@@ -55,58 +65,58 @@
 
 
 .mapTile.grass1>[data-obj-sub-type^="sub-1-e-6"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 606px -292px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 606px -292px;
     background-color: rgb(0, 217, 255);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-1-e-7"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 670px -319px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 670px -319px;
     background-color: rgb(0, 47, 255);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-1-e-8"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 638px -319px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 638px -319px;
     background-color: rgb(115, 0, 255);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-1-e-9"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 607px -319px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 607px -319px;
     background-color: rgb(251, 0, 255);
 }
 
 
 .mapTile.grass1>[data-obj-sub-type^="sub-2-e-1"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 606px -228px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 606px -228px;
     background-color: rgb(0, 217, 255);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-2-e-3"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 638px -229px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 638px -229px;
     background-color: rgb(115, 0, 255);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-2-e-7"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 605px -193px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 605px -193px;
     background-color: rgb(251, 0, 255);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-2-e-9"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 638px -192px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 638px -192px;
     background-color: rgb(255 199 123);
 }
 
 
 .mapTile.grass1>[data-obj-sub-type^="sub-3-e-1"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 671px -196px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 671px -196px;
     background-color: hsl(31deg 64% 32% / 67%);
     transform: rotate(121deg);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-3-e-3"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 671px -196px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 671px -196px;
     background-color: hsl(31deg 64% 32% / 67%);
     transform: rotate(221deg);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-3-e-7"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 671px -196px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 671px -196px;
     background-color: hsl(31deg 64% 32% / 67%);
     transform: rotate(28deg);
 }
 .mapTile.grass1>[data-obj-sub-type^="sub-3-e-9"] {
-    background: url("./../../game/maps/proto-summer/assets/terrain_2.png") 671px -196px;
+    background: url("./../../maps/proto-summer/assets/terrain_2.png") 671px -196px;
     background-color: hsl(31deg 64% 32% / 67%);
     transform: rotate(311deg);
 }
